# toptopduck

./: .gitattributes  .gitignore  AGENTS.md  CONTEXT.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
docs/adr/: 0001-desktop-app-local-first.md  0002-text-to-sql-over-duckdb.md  0003-materialize-each-step.md  0004-derive-only-source-readonly.md  0005-engine-level-guardrails.md  0006-llm-cloud-byok-privacy-boundary.md  0007-single-provider-claude-abstraction.md  0008-tauri-framework.md  0009-one-sql-per-turn-contract.md  0010-invisible-chaining-natural-language-retargeting.md  0011-privacy-boundary-real-samples-controlled.md  0012-source-immutable-snapshot-inmemory-session.md  0013-result-lifecycle-soft-invalidate-windowed-view.md  0014-extensions-bundled-offline.md  0015-excel-loading-rectify-guided-fallback.md  0016-frontend-react-vegalite-viz.md  0017-capability-boundary-refuse-out-of-scope.md  0018-disambiguation-default-and-flag.md  0019-llm-reachability-byok-scoping.md  0020-loading-type-safety-expose-reupload-llm-guardrail.md  0021-execution-concurrency-cancellation.md  0022-multi-source-shared-namespace-active-source.md  0023-conversation-history-turn-windowed.md  0024-result-materialization-physical-table-streamed-export.md  0025-source-replacement-cascade-invalidate.md  0026-sample-rows-first3-fixed-windowed.md  0027-multiple-sessions-isolated-inmemory.md  0028-no-result-turn-outcome-contract.md  0029-local-trust-boundary-no-author-egress-key-in-rust.md  0030-materialization-edge-cases-empty-and-truncation-disclosure.md  0031-cross-source-relationships-no-hint-engine-mandatory-join-flag.md  0032-schema-type-representation-verbatim-canonical-nested-expanded.md  0033-viz-triggering-llm-decides-degradation-disclosed.md  0034-cross-session-persistence-recipe-only-portable-duckdoc.md  0035-resume-integrity-concurrency-fingerprint-honest-degrade-single-writer.md  0036-duckdoc-format-versioned-forward-compat-contents-boundary-secrets-never.md  0037-dataset-identity-stable-reference-name-vs-renamable-display-alias.md  0038-app-level-config-second-atrest-artifact-preferences-only-no-secrets-no-user-data-values.md  0039-turn-summary-far-window-verbatim-truncation-not-llm-generated.md  0040-source-lifecycle-serialized-with-turns-non-turn-excluded-from-llm-window.md  (+12 more)
docs/agents/: domain.md  git-flow.md
src/: App.tsx  api.ts  loadErrorMessage.ts  main.tsx  styles.css  test-setup.ts  types.ts  viz.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cancel.rs  commands.rs  guardrail.rs  lib.rs  main.rs  model.rs  window.rs  workingset.rs
src-tauri/src/ingest/: csv.rs  excel.rs  loader.rs  mod.rs  schema.rs  tidy.rs
src-tauri/src/provider/: anthropic.rs  fake.rs  keychain.rs  mod.rs  prompt.rs
src-tauri/src/session/: mod.rs  sandbox.rs  snapshot.rs
src-tauri/tests/: ingest_blackbox.rs  ipc_contract.rs  lifecycle_blackbox.rs  provider_integration.rs  query_blackbox.rs
src-tauri/tests/fixtures/: flat.json  leading_zero.csv  nested.json  orders.csv  people.csv  unsupported.xlsx
src/__tests__/: App.test.tsx  components.test.tsx  loadErrorMessage.test.ts  viz.test.ts
src/components/: DatasetDetail.tsx  DisclosureBanner.tsx  FileDropzone.tsx  GuidedLoadDialog.tsx  PrivacyControls.tsx  QuestionBar.tsx  ResultView.tsx  SettingsDialog.tsx  Thread.tsx  WorkingSetList.tsx
