[package]
name = "toptopduck"
version = "0.1.0"
description = "Local-first AI data analysis desktop tool"
edition = "2021"
rust-version = "1.77"

[lib]
name = "toptopduck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `parquet` statically compiles the DuckDB parquet extension into the binary so
# `read_parquet` works offline (ADR-0014: extensions bundled, never autodownloaded).
# CSV/JSON readers ship in DuckDB core; parquet needs this bundled extension.
duckdb = { version = "1", features = ["bundled", "parquet"] }
sha2 = "0.10"
anyhow = "1"
tempfile = "3"
# `calamine` reads .xlsx cell cached values (formulas resolved to their cached
# result, never recomputed -- ADR-0015) fully offline. duckdb-rs's vendored
# DuckDB amalgamation cannot statically link the `excel` loadable extension
# (manifest ships only core_functions/json/parquet), so xlsx bytes go
# calamine -> per-sheet temp CSV -> read_csv_auto copy-in, keeping DuckDB as the
# single type-inference source of truth (ADR-0032). See ADR-0014/0015/0043.
calamine = { version = "0.30", features = ["dates"] }
# Per-sheet temp CSV writer: correct escaping for commas/quotes/newlines in cells.
csv = "1"
# `log` facade for diagnostic warnings (silent type-inference degradation on
# Excel error/undecodable-date cells, rollback failures). calamine already
# pulls `log` in transitively; declaring it explicitly makes the call sites
# intentional. No sink is wired yet -- the warnings go live once a sink
# (tauri-plugin-log, or env_logger in tests) is installed; until then they are
# no-ops, which still beats silent `let _ =` swallows.
log = "0.4"

[dev-dependencies]
tempfile = "3"
# Generates .xlsx fixtures (incl. formula cells with cached values) for the
# black-box ingest seam -- no binary fixtures committed (mirrors the parquet
# fixture helper).
rust_xlsxwriter = "0.92"

[profile.dev]
incremental = true
