[package]
name = "toptopduck"
version = "0.1.0"
description = "Local-first AI data analysis desktop tool"
edition = "2021"
rust-version = "1.77"

[lib]
name = "toptopduck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `parquet` statically compiles the DuckDB parquet extension into the binary so
# `read_parquet` works offline (ADR-0014: extensions bundled, never autodownloaded).
# CSV/JSON readers ship in DuckDB core; parquet needs this bundled extension.
duckdb = { version = "1", features = ["bundled", "parquet"] }
sha2 = "0.10"
anyhow = "1"
tempfile = "3"
# `calamine` reads .xlsx cell cached values (formulas resolved to their cached
# result, never recomputed -- ADR-0015) fully offline. duckdb-rs's vendored
# DuckDB amalgamation cannot statically link the `excel` loadable extension
# (manifest ships only core_functions/json/parquet), so xlsx bytes go
# calamine -> per-sheet temp CSV -> read_csv_auto copy-in, keeping DuckDB as the
# single type-inference source of truth (ADR-0032). See ADR-0014/0015/0043.
calamine = { version = "0.30", features = ["dates"] }
# Per-sheet temp CSV writer: correct escaping for commas/quotes/newlines in cells.
csv = "1"
# Real LLM transport (issue #29, ADR-0007/0019/0029): blocking HTTP client for
# the Anthropic Messages API, called from the sync `Provider::generate` path on
# a blocking thread. Chosen over reqwest (async) because the provider trait is
# synchronous and runs under `spawn_blocking` -- no async runtime needed, and
# ureq is far lighter. The `json` feature adds serde integration; TLS (rustls,
# default) is pure-Rust and cross-platform with no native deps. This is the ONLY
# network egress surface in the app -- the webview has no HTTP plugin and the
# CSP blocks its external connect (ADR-0029 invariant 1).
ureq = { version = "2", features = ["json"] }
# OS keychain access (ADR-0029 invariant 3): the decrypted API key lives only
# in the Rust core process. The frontend never holds it ("is it set?" returns a
# bool); Rust fetches it per turn and attaches it to the LLM call. Cross-
# platform (Windows Credential Manager / macOS Keychain / Linux Secret Service).
keyring = "3"
# `log` facade for diagnostic warnings (silent type-inference degradation on
# Excel error/undecodable-date cells, rollback failures). calamine already
# pulls `log` in transitively; declaring it explicitly makes the call sites
# intentional. No sink is wired yet -- the warnings go live once a sink
# (tauri-plugin-log, or env_logger in tests) is installed; until then they are
# no-ops, which still beats silent `let _ =` swallows.
log = "0.4"

[dev-dependencies]
tempfile = "3"
# Generates .xlsx fixtures (incl. formula cells with cached values) for the
# black-box ingest seam -- no binary fixtures committed (mirrors the parquet
# fixture helper).
rust_xlsxwriter = "0.92"
# HTTP mock for the real-provider unit tests (issue #29): AnthropicProvider is
# exercised against a local mockito server instead of the network -- the turn
# orchestrator's offline test base stays on FakeProvider; this tests the HTTP +
# auth + parse path deterministically, no real key, no real Anthropic.
mockito = "1"

[profile.dev]
incremental = true
